# test_test

./: .env.example  .envrc  .gitignore  AGENTS.md  LICENSE  README.md  fid  lefthook.yml  model.json  pyproject.toml
docs/: AGENT_SKILLS.md  HOOKS.md  LEFTHOOK.md
fid_coder/: __init__.py  __main__.py  callbacks.py  cli_runner.py  config.py  error_logging.py  http_utils.py  keymap.py  list_filtering.py  main.py  model_descriptions.py  model_factory.py  model_switching.py  model_utils.py  provider_credentials.py  provider_identity.py  pydantic_patches.py  reopenable_async_client.py  secret_store.py  secret_store_backends.py  session_lifecycle.py  session_migration.py  session_storage.py  status_display.py  summarization_agent.py  terminal_utils.py  undo_manager.py  version_checker.py
tests/: conftest.py  test_agent_creator_full_coverage.py  test_agent_pinned_models.py  test_agent_refresh.py  test_agent_tools.py  test_agent_tools_coverage.py  test_agent_tools_full_coverage.py  test_ask_user_question_full_coverage.py  test_auto_save_session.py  test_callback_extensions.py  test_callbacks_extended.py  test_chatgpt_codex_client.py  test_cli_runner.py  test_cli_runner_coverage.py  test_cli_runner_full_coverage.py  test_cli_runner_persistent_prompt.py  test_cli_runner_plugin_cli_args.py  test_cli_runner_turn_exception.py  test_command_cache.py  test_command_handler.py  test_command_line_attachments.py  test_command_line_utils.py  test_command_registry.py  test_compaction_strategy.py  test_completions_and_small_modules.py  test_config.py  test_config_and_storage_edge_cases.py  test_config_extended_part1.py  test_config_extended_part2.py  test_config_full_coverage.py  test_coverage_agents_gaps.py  test_ctrl_c_guard.py  test_edit_file_expansion.py  test_error_logging.py  test_file_modification_auxiliary.py  test_file_permissions.py  test_gemini_code_assist.py  test_hook_manager.py  test_http_utils.py  test_http_utils_full_coverage.py  (+57 more)
(+641 files in other folders)
