[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fid-coder"
version = "0.0.643"
description = "Fid Coder - an internal coding agent"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic-ai-slim[openai,anthropic,mcp]==1.56.0",
    "anthropic==0.79.0",
    "typer>=0.12.0",
    "mcp>=1.9.4",
    "httpx[http2]>=0.24.1",
    "requests>=2.28.0",
    "rich>=13.4.2",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.52",
    "json-repair>=0.46.2",
    "pyfiglet>=0.8.post1",
    "rapidfuzz>=3.13.0",
    "openai>=1.99.1",
    "ripgrep==14.1.0",
    "termflow-md>=0.1.11",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "keyring>=24.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
fid-coder = "fid_coder.main:main_entry"
fid = "fid_coder.main:main_entry"

[tool.logfire]
ignore_no_config = true

[tool.setuptools.packages.find]
include = ["fid_coder*"]

[tool.setuptools.package-data]
fid_coder = ["models.json", "plugins/**/*.md"]

[tool.ruff.lint.per-file-ignores]
"fid_coder/main.py" = ["E402"]
"fid_coder/cli_runner.py" = ["E402"]
"fid_coder/messaging/__init__.py" = ["E402"]

[tool.pytest.ini_options]
addopts = "--cov=fid_coder --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["fid_coder/main.py"]

[tool.uv]
python-preference = "only-managed"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.23.1",
    "ruff>=0.11.11",
    "pexpect>=4.9.0",
]
